# Decl_Audio

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Decl_Audio.sln  DeclarativeSoundEngine.sln  README.md  buffersize.patch  build.bat  callbackframesizehandling.patch  handlereturnvalues.patch  readme.patch  samplerateconversion.patch  sourceChannels.patch
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
AudioTestCLI/: AudioTestCLI.cpp  AudioTestCLI.vcxproj  AudioTestCLI.vcxproj.filters
Decl_Audio/: Decl_Audio.vcxproj
Decl_Audio.QueueTests/: Decl_Audio.QueueTests.vcxproj
Decl_Audio.Tests/: Decl_Audio.Tests.vcxproj
DeclarativeSoundEngine/: ASTBuilder.hpp  ASTNode.hpp  ActiveBehavior.cpp  ActiveBehavior.hpp  AudioBehavior.hpp  AudioBuffer.cpp  AudioBuffer.hpp  AudioBufferManager.cpp  AudioBufferManager.hpp  AudioCommand.hpp  AudioCore.cpp  AudioCore.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioDeviceMiniAudio.cpp  AudioDeviceMiniAudio.hpp  AudioDeviceStub.cpp  AudioDeviceStub.hpp  AudioDeviceUnity.cpp  AudioDeviceUnity.hpp  AudioManager.cpp  AudioManager.hpp  AudioManagerAPI.cpp  AudioManagerAPI.hpp  BehaviorDef.hpp  BehaviorDefinitionManager.cpp  BehaviorDefinitionManager.hpp  BehaviorLoader.cpp  BehaviorLoader.hpp  BehaviorResolver.cpp  BehaviorResolver.hpp  Bus.hpp  Condition.cpp  Condition.hpp  DeclarativeSoundEngine.vcxproj  DeclarativeSoundEngine.vcxproj.filters  Entity.cpp  Entity.hpp  Expression.cpp  Expression.hpp  (+32 more)
apps/AudioTestCLI/: main.cpp
apps/SandboxCLI/: Decl_Audio.SandboxCLI.vcxproj  SandboxMain.cpp
apps/Validator/: Decl_Audio.Validator.vcxproj  ValidatorMain.cpp
docs/: Design.md  Roadmap.md
include/Decl_Audio/: Decl_Audio.h  Export.h
include/DeclarativeSoundEngine/: AudioConfig.hpp  AudioManagerAPI.hpp  Log.hpp  declsound_export.hpp
managed/Decl_Audio.Sharp/: Decl_Audio.Sharp.cs
src/: RingBuffer.hpp
src/api/: Decl_Audio.cpp
src/assets/: AssetBank.cpp  AssetBank.hpp
src/backends/: AudioDevice.hpp  AudioDeviceBackend.cpp  AudioDeviceBackend.hpp  AudioDeviceMiniAudio.cpp  AudioDeviceMiniAudio.hpp  AudioDeviceStub.cpp  AudioDeviceUnity.cpp  AudioDeviceUnity.hpp  MiniaudioBackend.cpp  MiniaudioBackend.hpp  StubBackend.cpp  StubBackend.hpp  UnityAudioPluginBridge.h
src/compiler/: AuthoringModel.hpp  AuthoringParser.cpp  CompiledBank.hpp  Compiler.cpp  Compiler.hpp  CompilerIO.cpp  CompilerTypes.hpp  Diagnostics.cpp  Diagnostics.hpp
src/core/: ActiveBehavior.cpp  ActiveBehavior.hpp  AudioBuffer.cpp  AudioBuffer.hpp  AudioCommand.hpp  AudioManager.cpp  AudioManager.hpp  AudioManagerAPI.cpp  BankId.hpp  BankSerializer.cpp  BankSerializer.hpp  BehaviorDef.hpp  BehaviorLoader.cpp  BehaviorLoader.hpp  Condition.cpp  ConfigSupport.hpp  DebugUtils.hpp  Diagnostics.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Expression.hpp  LeafBuilder.hpp  LoadedBank.hpp  Log.cpp  MatchUtils.cpp  MatchUtils.hpp  Node.cpp  Node.hpp  ParserUtils.cpp  RingBuffer.hpp  Snapshot.hpp  SpeakerLayout.hpp  TagMap.cpp  TagMap.hpp  ValueMap.cpp  ValueMap.hpp  Vec3.hpp  vec3.hpp
src/platform/win32/: dllmain.cpp  framework.h
src/playback/: AudioCommands.hpp  AudioRuntime.cpp  AudioRuntime.hpp
src/runtime/: BehaviorResolver.hpp  ControlRuntime.cpp  ControlRuntime.hpp  HostCommands.hpp  VocabularyRegistry.hpp  WorldState.hpp
tests/: AssetBankTests.cpp  BankSerializerTests.cpp  CompilerTests.cpp  HostLogTests.cpp  PlaybackTests.cpp  RingBufferTests.cpp  TestMain.cpp  WorldStateTests.cpp
tests/data/: InvalidBehaviorBank.json  InvalidSampleRateBehaviorBank.json  LayerBankA.json  LayerBankB.json  NestedBehaviorBank.json  ParameterForwardingBehaviorBank.json  PlaybackBehaviorBank.json  SandboxBehaviorBank.json  SpatializationBehaviorBank.json  ValidBehaviorBank.json
